--- a/app/src/main/res/layout/complex_activity_main.xml
+++ b/app/src/main/res/layout/complex_activity_main.xml
@@ -184,14 +184,9 @@
 			android:layout_marginLeft="15dp"
 			android:layout_marginTop="5dp"
 			android:gravity="left|center_vertical"
-			android:text="记住账号"
+			android:text="记住密码"
 			android:textColor="@android:color/white"
-			android:textSize="16sp"
-
-			android:drawablePadding="5dp"
-			android:paddingLeft="0dp"
-			android:drawableLeft="@mipmap/box_checked"
-			android:button="@null" />
+			android:textSize="16sp"/>
 
 		<!--忘记密码的按钮-->
         <Button
